tests/fixtures/invalid/pow_none_float_float.py
# Cannot call pow() with None, Float, Float
x = pow(None, 1.0, 1.0)
